# biblishelf

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  MANIFEST.in  README.md  circle.yml  pyproject.toml  pytest.ini  requirements.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
dev/: mimetype.reg
sphinx/: conf.py  conf_cjk.py  index.rst
sphinx/developer/: db.rst  index.rst  prepare.rst
sphinx/usage/: install.rst
src/: db.sqlite3  manage.py  test.py
src/biblishelf/core/: __init__.py  _version.py  bib_repo.py  compatibility.py  repo.py
src/biblishelf/db/: models.py
src/biblishelf_album/: apps.py  models.py
src/biblishelf_book/: admin.py  apps.py  models.py
src/biblishelf_book/migrations/: 0001_initial.py  0002_auto_20160924_2120.py  0002_auto_extend_field.py
src/biblishelf_cli/: main.py
src/biblishelf_cli/command/: __init__.py  base.py  init.py  plugins.py  repo.py  search.py  status.py
src/biblishelf_core/: command.py  file_info.py  hook.py  loader.py  models.py  shortcut.py
src/biblishelf_core/actions/: scan.py
src/biblishelf_core/commands/: __init__.py  init.py  scan.py  search.py  test.py
src/biblishelf_core/conf/: register.py  repo.py
src/biblishelf_core/repo/: generate.py  models.py
src/biblishelf_main/: admin.py  apps.py  models.py
src/biblishelf_main/admin/: __init__.py  (+7 more)
src/biblishelf_plugin_archiving/: __init__.py  models.py
src/biblishelf_plugin_book/: __init__.py  hook.py  models.py
src/biblishelf_vdisk/: admin.py  apps.py  models.py
src/biblishelf_web/: dbroute.py  middleware.py  settings.py  signals.py  urls.py  wsgi.py
src/pathinfo/: mount.py
test/: test_always_pass.py
(+123 files in other folders)
